--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "3.3"
 services:
-  db:
-    container_name: go-mysql
+  gomysql:
     image: mysql
     restart: always
     environment:
@@ -14,9 +13,15 @@ services:
     volumes:
       - .:/usr/src/app
     depends_on:
-      - db
+      - gomysql
     ports:
       - 5001:5001
+    environment:
+      - DB_NAME:$DB_NAME
+      - DB_PORT:$DB_PORT
+      - DB_PASSWORD:$DB_PASSWORD
+      - API_PORT:$API_PORT
+      - DB_USER:$DB_USER
     
 
 
